[package]
name = "transfer_token"
version = "0.1.0"
edition = "2024"

[dependencies]
borsh = "1.5.7"
borsh-derive = "1.5.7"
mpl-token-metadata = "5.1.0" 
solana-program = "2.3.0"
spl-associated-token-account = {version = "7.0.0" , features = ["no-entrypoint"]}
spl-token = { version = "8.0.0", features = ["no-entrypoint"] }
